# C-and-Unix

./: Charge.h  Hameed_Answers  PatientAccount.cpp  PatientAccount.h  Pharmacy.h  README.md  Surgery.h  homework-3.docx  main.cpp  other-program2.cpp  other-program2_withChanges  pgm2  program3report.docx  programdescription.docx  recursive encryption method
ErickProgram6/: a.out  client  client.cpp  client.cpp~  server  server.cpp
Pgm4-Erick/: Pgm4.sln
Pgm4-Erick/Pgm4/: FuelGauge.cpp  FuelGauge.h  Odometer.cpp  Odometer.h  Pgm4.cpp  Pgm4.vcxproj  Pgm4.vcxproj.filters  ReadMe.txt  stdafx.cpp
Program 6/: CMakeLists.txt  Message.cpp  Message.h  Program 6  Program 6.cpp  Program 6.sln  Program 6.vcxproj  Program 6.vcxproj.filters  ReadMe.txt  Server.cpp  Server.h  SuperServer.cpp  SuperServer.h  User.cpp  User.h  a.out  run
Program 6/Debug/: Program 6.pch  vc140.idb
archive/homework3/: 47to49HW3.docx
archive/program3/: Charge.h  PatientAccount.cpp
archive/program4/: FuelGauge.cpp  Program4 Standard.docx  main.cpp  (+1 more)
final-proj/: Erick.Program.Description.docx  Paper.Outline.docx  programdescription.docx
old/: other-program2.cpp
program3/: CMakeLists.txt  Surgery.h  main.cpp
program4/: CMakeLists.txt  FuelGauge.cpp  FuelGauge.h  Odometer.cpp  Odometer.h  main.cpp  pgm4_writeup_part2.docx  ~$ogram4 Standard.docx
program5/: CMakeLists.txt  Card.h  Deck.cpp  Deck.h  Hand.cpp  Hand.h  Report_p3.docx  Suit.h  a.out  guidelines.txt  main.cpp
program6/: CMakeLists.txt  guidelines.txt  main.cpp
project/testing/: CMakeLists.txt  main.cpp  test2.cpp  test3.cpp
(+50 files in other folders)
